resources/y.output
   0  $accept : program $end

   1  program :
   2          | statements

   3  statements : declarative_statements
   4             | executional_statements
   5             | statements declarative_statements
   6             | statements executional_statements

   7  declarative_statements : var_list ':' type '.'
   8                         | var_list ':' type
   9                         | var_list ':' '.'
  10                         | var_list type '.'
  11                         | ':' type '.'

  12  $$1 :

  13  declarative_statements : var_list type $$1 ':' '.'

  14  var_list : ID
  15           | var_list ',' ID
  16           | var_list ID
  17           | ',' ID

  18  type : ULONG
  19       | FLOAT

  20  executional_statements : if_statement
  21                         | if_else_statement
  22                         | assignation_statement

  23  if_statement : IF '(' condition ')' THEN executional_statements END_IF '.'
  24               | IF '(' condition ')' THEN explicit_delimited_execution_block END_IF '.'
  25               | IF '(' condition ')' THEN executional_statements END_IF
  26               | IF '(' condition ')' THEN executional_statements error '.'
  27               | IF '(' condition ')' THEN END_IF '.'
  28               | IF '(' condition ')' executional_statements END_IF '.'
  29               | IF '(' condition THEN executional_statements END_IF '.'
  30               | IF '(' ')' THEN executional_statements END_IF '.'
  31               | IF condition ')' THEN executional_statements END_IF '.'
  32               | '(' condition ')' THEN executional_statements END_IF '.'
  33               | IF '(' condition ')' THEN explicit_delimited_execution_block END_IF
  34               | IF '(' condition ')' THEN explicit_delimited_execution_block error '.'
  35               | IF '(' condition ')' explicit_delimited_execution_block END_IF '.'
  36               | IF '(' condition THEN explicit_delimited_execution_block END_IF '.'
  37               | IF '(' ')' THEN explicit_delimited_execution_block END_IF '.'
  38               | IF condition ')' THEN explicit_delimited_execution_block END_IF '.'
  39               | '(' condition ')' THEN explicit_delimited_execution_block END_IF '.'

  40  if_else_statement : IF '(' condition ')' THEN executional_statements ELSE executional_statements END_IF '.'
  41                    | IF '(' condition ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'
  42                    | IF '(' condition ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'
  43                    | IF '(' condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'
  44                    | IF '(' condition ')' THEN executional_statements ELSE executional_statements END_IF
  45                    | IF '(' condition ')' THEN executional_statements ELSE executional_statements error '.'
  46                    | IF '(' condition ')' THEN executional_statements ELSE END_IF '.'
  47                    | IF '(' condition ')' THEN ELSE executional_statements END_IF '.'
  48                    | IF '(' condition ')' executional_statements ELSE executional_statements END_IF '.'
  49                    | IF '(' condition THEN executional_statements ELSE executional_statements END_IF '.'
  50                    | IF '(' ')' THEN executional_statements ELSE executional_statements END_IF '.'
  51                    | IF condition ')' THEN executional_statements ELSE executional_statements END_IF '.'
  52                    | '(' condition ')' THEN executional_statements ELSE executional_statements END_IF '.'
  53                    | IF '(' condition ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF
  54                    | IF '(' condition ')' THEN executional_statements ELSE explicit_delimited_execution_block error '.'
  55                    | IF '(' condition ')' THEN ELSE explicit_delimited_execution_block END_IF '.'
  56                    | IF '(' condition ')' executional_statements ELSE explicit_delimited_execution_block END_IF '.'
  57                    | IF '(' condition THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'
  58                    | IF '(' ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'
  59                    | IF condition ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'
  60                    | '(' condition ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'
  61                    | IF '(' condition ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF
  62                    | IF '(' condition ')' THEN explicit_delimited_execution_block ELSE executional_statements error '.'
  63                    | IF '(' condition ')' THEN explicit_delimited_execution_block ELSE END_IF '.'
  64                    | IF '(' condition ')' explicit_delimited_execution_block ELSE executional_statements END_IF '.'
  65                    | IF '(' condition THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'
  66                    | IF '(' ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'
  67                    | IF condition ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'
  68                    | '(' condition ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'
  69                    | IF '(' condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF
  70                    | IF '(' condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block error '.'
  71                    | IF '(' condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block error END_IF '.'
  72                    | IF '(' condition ')' explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'
  73                    | IF '(' condition THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'
  74                    | IF '(' ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'
  75                    | IF condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'
  76                    | '(' condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'

  77  explicit_delimited_execution_block : BEGIN execution_block END '.'

  78  execution_block : execution_block executional_statements

  79  assignation_statement : LET ID '=' expression '.'

  80  condition : expression EQUAL expression
  81            | expression '>' expression
  82            | expression '<' expression
  83            | expression GREATER_EQUAL expression
  84            | expression LESS_EQUAL expression
  85            | expression NOT_EQUAL expression

  86  expression : expression '+' term
  87             | expression '-' term
  88             | term

  89  term : term '*' factor
  90       | term '/' factor
  91       | factor

  92  factor : ID
  93         | NUMERIC_CONST

state 0
	$accept : . program $end  (0)
	program : .  (1)

	ID  shift 1
	IF  shift 2
	LET  shift 3
	':'  shift 4
	','  shift 5
	'('  shift 6
	$end  reduce 1

	program  goto 7
	statements  goto 8
	declarative_statements  goto 9
	executional_statements  goto 10
	var_list  goto 11
	if_statement  goto 12
	if_else_statement  goto 13
	assignation_statement  goto 14


state 1
	var_list : ID .  (14)

	.  reduce 14


state 2
	if_statement : IF . '(' condition ')' THEN executional_statements END_IF '.'  (23)
	if_statement : IF . '(' condition ')' THEN explicit_delimited_execution_block END_IF '.'  (24)
	if_statement : IF . '(' condition ')' THEN executional_statements END_IF  (25)
	if_statement : IF . '(' condition ')' THEN executional_statements error '.'  (26)
	if_statement : IF . '(' condition ')' THEN END_IF '.'  (27)
	if_statement : IF . '(' condition ')' executional_statements END_IF '.'  (28)
	if_statement : IF . '(' condition THEN executional_statements END_IF '.'  (29)
	if_statement : IF . '(' ')' THEN executional_statements END_IF '.'  (30)
	if_statement : IF . condition ')' THEN executional_statements END_IF '.'  (31)
	if_statement : IF . '(' condition ')' THEN explicit_delimited_execution_block END_IF  (33)
	if_statement : IF . '(' condition ')' THEN explicit_delimited_execution_block error '.'  (34)
	if_statement : IF . '(' condition ')' explicit_delimited_execution_block END_IF '.'  (35)
	if_statement : IF . '(' condition THEN explicit_delimited_execution_block END_IF '.'  (36)
	if_statement : IF . '(' ')' THEN explicit_delimited_execution_block END_IF '.'  (37)
	if_statement : IF . condition ')' THEN explicit_delimited_execution_block END_IF '.'  (38)
	if_else_statement : IF . '(' condition ')' THEN executional_statements ELSE executional_statements END_IF '.'  (40)
	if_else_statement : IF . '(' condition ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (41)
	if_else_statement : IF . '(' condition ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (42)
	if_else_statement : IF . '(' condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (43)
	if_else_statement : IF . '(' condition ')' THEN executional_statements ELSE executional_statements END_IF  (44)
	if_else_statement : IF . '(' condition ')' THEN executional_statements ELSE executional_statements error '.'  (45)
	if_else_statement : IF . '(' condition ')' THEN executional_statements ELSE END_IF '.'  (46)
	if_else_statement : IF . '(' condition ')' THEN ELSE executional_statements END_IF '.'  (47)
	if_else_statement : IF . '(' condition ')' executional_statements ELSE executional_statements END_IF '.'  (48)
	if_else_statement : IF . '(' condition THEN executional_statements ELSE executional_statements END_IF '.'  (49)
	if_else_statement : IF . '(' ')' THEN executional_statements ELSE executional_statements END_IF '.'  (50)
	if_else_statement : IF . condition ')' THEN executional_statements ELSE executional_statements END_IF '.'  (51)
	if_else_statement : IF . '(' condition ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF  (53)
	if_else_statement : IF . '(' condition ')' THEN executional_statements ELSE explicit_delimited_execution_block error '.'  (54)
	if_else_statement : IF . '(' condition ')' THEN ELSE explicit_delimited_execution_block END_IF '.'  (55)
	if_else_statement : IF . '(' condition ')' executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (56)
	if_else_statement : IF . '(' condition THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (57)
	if_else_statement : IF . '(' ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (58)
	if_else_statement : IF . condition ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (59)
	if_else_statement : IF . '(' condition ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF  (61)
	if_else_statement : IF . '(' condition ')' THEN explicit_delimited_execution_block ELSE executional_statements error '.'  (62)
	if_else_statement : IF . '(' condition ')' THEN explicit_delimited_execution_block ELSE END_IF '.'  (63)
	if_else_statement : IF . '(' condition ')' explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (64)
	if_else_statement : IF . '(' condition THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (65)
	if_else_statement : IF . '(' ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (66)
	if_else_statement : IF . condition ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (67)
	if_else_statement : IF . '(' condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF  (69)
	if_else_statement : IF . '(' condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block error '.'  (70)
	if_else_statement : IF . '(' condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block error END_IF '.'  (71)
	if_else_statement : IF . '(' condition ')' explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (72)
	if_else_statement : IF . '(' condition THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (73)
	if_else_statement : IF . '(' ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (74)
	if_else_statement : IF . condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (75)

	ID  shift 15
	NUMERIC_CONST  shift 16
	'('  shift 17
	.  error

	condition  goto 18
	expression  goto 19
	term  goto 20
	factor  goto 21


state 3
	assignation_statement : LET . ID '=' expression '.'  (79)

	ID  shift 22
	.  error


state 4
	declarative_statements : ':' . type '.'  (11)

	FLOAT  shift 23
	ULONG  shift 24
	.  error

	type  goto 25


state 5
	var_list : ',' . ID  (17)

	ID  shift 26
	.  error


state 6
	if_statement : '(' . condition ')' THEN executional_statements END_IF '.'  (32)
	if_statement : '(' . condition ')' THEN explicit_delimited_execution_block END_IF '.'  (39)
	if_else_statement : '(' . condition ')' THEN executional_statements ELSE executional_statements END_IF '.'  (52)
	if_else_statement : '(' . condition ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (60)
	if_else_statement : '(' . condition ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (68)
	if_else_statement : '(' . condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (76)

	ID  shift 15
	NUMERIC_CONST  shift 16
	.  error

	condition  goto 27
	expression  goto 19
	term  goto 20
	factor  goto 21


state 7
	$accept : program . $end  (0)

	$end  accept


state 8
	program : statements .  (2)
	statements : statements . declarative_statements  (5)
	statements : statements . executional_statements  (6)

	ID  shift 1
	IF  shift 2
	LET  shift 3
	':'  shift 4
	','  shift 5
	'('  shift 6
	$end  reduce 2

	declarative_statements  goto 28
	executional_statements  goto 29
	var_list  goto 11
	if_statement  goto 12
	if_else_statement  goto 13
	assignation_statement  goto 14


state 9
	statements : declarative_statements .  (3)

	.  reduce 3


state 10
	statements : executional_statements .  (4)

	.  reduce 4


state 11
	declarative_statements : var_list . ':' type '.'  (7)
	declarative_statements : var_list . ':' type  (8)
	declarative_statements : var_list . ':' '.'  (9)
	declarative_statements : var_list . type '.'  (10)
	declarative_statements : var_list . type $$1 ':' '.'  (13)
	var_list : var_list . ',' ID  (15)
	var_list : var_list . ID  (16)

	ID  shift 30
	FLOAT  shift 23
	ULONG  shift 24
	':'  shift 31
	','  shift 32
	.  error

	type  goto 33


state 12
	executional_statements : if_statement .  (20)

	.  reduce 20


state 13
	executional_statements : if_else_statement .  (21)

	.  reduce 21


state 14
	executional_statements : assignation_statement .  (22)

	.  reduce 22


state 15
	factor : ID .  (92)

	.  reduce 92


state 16
	factor : NUMERIC_CONST .  (93)

	.  reduce 93


state 17
	if_statement : IF '(' . condition ')' THEN executional_statements END_IF '.'  (23)
	if_statement : IF '(' . condition ')' THEN explicit_delimited_execution_block END_IF '.'  (24)
	if_statement : IF '(' . condition ')' THEN executional_statements END_IF  (25)
	if_statement : IF '(' . condition ')' THEN executional_statements error '.'  (26)
	if_statement : IF '(' . condition ')' THEN END_IF '.'  (27)
	if_statement : IF '(' . condition ')' executional_statements END_IF '.'  (28)
	if_statement : IF '(' . condition THEN executional_statements END_IF '.'  (29)
	if_statement : IF '(' . ')' THEN executional_statements END_IF '.'  (30)
	if_statement : IF '(' . condition ')' THEN explicit_delimited_execution_block END_IF  (33)
	if_statement : IF '(' . condition ')' THEN explicit_delimited_execution_block error '.'  (34)
	if_statement : IF '(' . condition ')' explicit_delimited_execution_block END_IF '.'  (35)
	if_statement : IF '(' . condition THEN explicit_delimited_execution_block END_IF '.'  (36)
	if_statement : IF '(' . ')' THEN explicit_delimited_execution_block END_IF '.'  (37)
	if_else_statement : IF '(' . condition ')' THEN executional_statements ELSE executional_statements END_IF '.'  (40)
	if_else_statement : IF '(' . condition ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (41)
	if_else_statement : IF '(' . condition ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (42)
	if_else_statement : IF '(' . condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (43)
	if_else_statement : IF '(' . condition ')' THEN executional_statements ELSE executional_statements END_IF  (44)
	if_else_statement : IF '(' . condition ')' THEN executional_statements ELSE executional_statements error '.'  (45)
	if_else_statement : IF '(' . condition ')' THEN executional_statements ELSE END_IF '.'  (46)
	if_else_statement : IF '(' . condition ')' THEN ELSE executional_statements END_IF '.'  (47)
	if_else_statement : IF '(' . condition ')' executional_statements ELSE executional_statements END_IF '.'  (48)
	if_else_statement : IF '(' . condition THEN executional_statements ELSE executional_statements END_IF '.'  (49)
	if_else_statement : IF '(' . ')' THEN executional_statements ELSE executional_statements END_IF '.'  (50)
	if_else_statement : IF '(' . condition ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF  (53)
	if_else_statement : IF '(' . condition ')' THEN executional_statements ELSE explicit_delimited_execution_block error '.'  (54)
	if_else_statement : IF '(' . condition ')' THEN ELSE explicit_delimited_execution_block END_IF '.'  (55)
	if_else_statement : IF '(' . condition ')' executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (56)
	if_else_statement : IF '(' . condition THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (57)
	if_else_statement : IF '(' . ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (58)
	if_else_statement : IF '(' . condition ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF  (61)
	if_else_statement : IF '(' . condition ')' THEN explicit_delimited_execution_block ELSE executional_statements error '.'  (62)
	if_else_statement : IF '(' . condition ')' THEN explicit_delimited_execution_block ELSE END_IF '.'  (63)
	if_else_statement : IF '(' . condition ')' explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (64)
	if_else_statement : IF '(' . condition THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (65)
	if_else_statement : IF '(' . ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (66)
	if_else_statement : IF '(' . condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF  (69)
	if_else_statement : IF '(' . condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block error '.'  (70)
	if_else_statement : IF '(' . condition ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block error END_IF '.'  (71)
	if_else_statement : IF '(' . condition ')' explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (72)
	if_else_statement : IF '(' . condition THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (73)
	if_else_statement : IF '(' . ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (74)

	ID  shift 15
	NUMERIC_CONST  shift 16
	')'  shift 34
	.  error

	condition  goto 35
	expression  goto 19
	term  goto 20
	factor  goto 21


state 18
	if_statement : IF condition . ')' THEN executional_statements END_IF '.'  (31)
	if_statement : IF condition . ')' THEN explicit_delimited_execution_block END_IF '.'  (38)
	if_else_statement : IF condition . ')' THEN executional_statements ELSE executional_statements END_IF '.'  (51)
	if_else_statement : IF condition . ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (59)
	if_else_statement : IF condition . ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (67)
	if_else_statement : IF condition . ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (75)

	')'  shift 36
	.  error


state 19
	condition : expression . EQUAL expression  (80)
	condition : expression . '>' expression  (81)
	condition : expression . '<' expression  (82)
	condition : expression . GREATER_EQUAL expression  (83)
	condition : expression . LESS_EQUAL expression  (84)
	condition : expression . NOT_EQUAL expression  (85)
	expression : expression . '+' term  (86)
	expression : expression . '-' term  (87)

	GREATER_EQUAL  shift 37
	LESS_EQUAL  shift 38
	EQUAL  shift 39
	NOT_EQUAL  shift 40
	'>'  shift 41
	'<'  shift 42
	'+'  shift 43
	'-'  shift 44
	.  error


state 20
	expression : term .  (88)
	term : term . '*' factor  (89)
	term : term . '/' factor  (90)

	'*'  shift 45
	'/'  shift 46
	GREATER_EQUAL  reduce 88
	LESS_EQUAL  reduce 88
	EQUAL  reduce 88
	NOT_EQUAL  reduce 88
	THEN  reduce 88
	'.'  reduce 88
	')'  reduce 88
	'>'  reduce 88
	'<'  reduce 88
	'+'  reduce 88
	'-'  reduce 88


state 21
	term : factor .  (91)

	.  reduce 91


state 22
	assignation_statement : LET ID . '=' expression '.'  (79)

	'='  shift 47
	.  error


state 23
	type : FLOAT .  (19)

	.  reduce 19


state 24
	type : ULONG .  (18)

	.  reduce 18


state 25
	declarative_statements : ':' type . '.'  (11)

	'.'  shift 48
	.  error


state 26
	var_list : ',' ID .  (17)

	.  reduce 17


state 27
	if_statement : '(' condition . ')' THEN executional_statements END_IF '.'  (32)
	if_statement : '(' condition . ')' THEN explicit_delimited_execution_block END_IF '.'  (39)
	if_else_statement : '(' condition . ')' THEN executional_statements ELSE executional_statements END_IF '.'  (52)
	if_else_statement : '(' condition . ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (60)
	if_else_statement : '(' condition . ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (68)
	if_else_statement : '(' condition . ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (76)

	')'  shift 49
	.  error


state 28
	statements : statements declarative_statements .  (5)

	.  reduce 5


state 29
	statements : statements executional_statements .  (6)

	.  reduce 6


state 30
	var_list : var_list ID .  (16)

	.  reduce 16


state 31
	declarative_statements : var_list ':' . type '.'  (7)
	declarative_statements : var_list ':' . type  (8)
	declarative_statements : var_list ':' . '.'  (9)

	FLOAT  shift 23
	ULONG  shift 24
	'.'  shift 50
	.  error

	type  goto 51


state 32
	var_list : var_list ',' . ID  (15)

	ID  shift 52
	.  error


state 33
	declarative_statements : var_list type . '.'  (10)
	declarative_statements : var_list type . $$1 ':' '.'  (13)
	$$1 : .  (12)

	'.'  shift 53
	':'  reduce 12

	$$1  goto 54


state 34
	if_statement : IF '(' ')' . THEN executional_statements END_IF '.'  (30)
	if_statement : IF '(' ')' . THEN explicit_delimited_execution_block END_IF '.'  (37)
	if_else_statement : IF '(' ')' . THEN executional_statements ELSE executional_statements END_IF '.'  (50)
	if_else_statement : IF '(' ')' . THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (58)
	if_else_statement : IF '(' ')' . THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (66)
	if_else_statement : IF '(' ')' . THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (74)

	THEN  shift 55
	.  error


state 35
	if_statement : IF '(' condition . ')' THEN executional_statements END_IF '.'  (23)
	if_statement : IF '(' condition . ')' THEN explicit_delimited_execution_block END_IF '.'  (24)
	if_statement : IF '(' condition . ')' THEN executional_statements END_IF  (25)
	if_statement : IF '(' condition . ')' THEN executional_statements error '.'  (26)
	if_statement : IF '(' condition . ')' THEN END_IF '.'  (27)
	if_statement : IF '(' condition . ')' executional_statements END_IF '.'  (28)
	if_statement : IF '(' condition . THEN executional_statements END_IF '.'  (29)
	if_statement : IF '(' condition . ')' THEN explicit_delimited_execution_block END_IF  (33)
	if_statement : IF '(' condition . ')' THEN explicit_delimited_execution_block error '.'  (34)
	if_statement : IF '(' condition . ')' explicit_delimited_execution_block END_IF '.'  (35)
	if_statement : IF '(' condition . THEN explicit_delimited_execution_block END_IF '.'  (36)
	if_else_statement : IF '(' condition . ')' THEN executional_statements ELSE executional_statements END_IF '.'  (40)
	if_else_statement : IF '(' condition . ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (41)
	if_else_statement : IF '(' condition . ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (42)
	if_else_statement : IF '(' condition . ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (43)
	if_else_statement : IF '(' condition . ')' THEN executional_statements ELSE executional_statements END_IF  (44)
	if_else_statement : IF '(' condition . ')' THEN executional_statements ELSE executional_statements error '.'  (45)
	if_else_statement : IF '(' condition . ')' THEN executional_statements ELSE END_IF '.'  (46)
	if_else_statement : IF '(' condition . ')' THEN ELSE executional_statements END_IF '.'  (47)
	if_else_statement : IF '(' condition . ')' executional_statements ELSE executional_statements END_IF '.'  (48)
	if_else_statement : IF '(' condition . THEN executional_statements ELSE executional_statements END_IF '.'  (49)
	if_else_statement : IF '(' condition . ')' THEN executional_statements ELSE explicit_delimited_execution_block END_IF  (53)
	if_else_statement : IF '(' condition . ')' THEN executional_statements ELSE explicit_delimited_execution_block error '.'  (54)
	if_else_statement : IF '(' condition . ')' THEN ELSE explicit_delimited_execution_block END_IF '.'  (55)
	if_else_statement : IF '(' condition . ')' executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (56)
	if_else_statement : IF '(' condition . THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (57)
	if_else_statement : IF '(' condition . ')' THEN explicit_delimited_execution_block ELSE executional_statements END_IF  (61)
	if_else_statement : IF '(' condition . ')' THEN explicit_delimited_execution_block ELSE executional_statements error '.'  (62)
	if_else_statement : IF '(' condition . ')' THEN explicit_delimited_execution_block ELSE END_IF '.'  (63)
	if_else_statement : IF '(' condition . ')' explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (64)
	if_else_statement : IF '(' condition . THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (65)
	if_else_statement : IF '(' condition . ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF  (69)
	if_else_statement : IF '(' condition . ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block error '.'  (70)
	if_else_statement : IF '(' condition . ')' THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block error END_IF '.'  (71)
	if_else_statement : IF '(' condition . ')' explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (72)
	if_else_statement : IF '(' condition . THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (73)

	THEN  shift 56
	')'  shift 57
	.  error


state 36
	if_statement : IF condition ')' . THEN executional_statements END_IF '.'  (31)
	if_statement : IF condition ')' . THEN explicit_delimited_execution_block END_IF '.'  (38)
	if_else_statement : IF condition ')' . THEN executional_statements ELSE executional_statements END_IF '.'  (51)
	if_else_statement : IF condition ')' . THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (59)
	if_else_statement : IF condition ')' . THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (67)
	if_else_statement : IF condition ')' . THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (75)

	THEN  shift 58
	.  error


state 37
	condition : expression GREATER_EQUAL . expression  (83)

	ID  shift 15
	NUMERIC_CONST  shift 16
	.  error

	expression  goto 59
	term  goto 20
	factor  goto 21


state 38
	condition : expression LESS_EQUAL . expression  (84)

	ID  shift 15
	NUMERIC_CONST  shift 16
	.  error

	expression  goto 60
	term  goto 20
	factor  goto 21


state 39
	condition : expression EQUAL . expression  (80)

	ID  shift 15
	NUMERIC_CONST  shift 16
	.  error

	expression  goto 61
	term  goto 20
	factor  goto 21


state 40
	condition : expression NOT_EQUAL . expression  (85)

	ID  shift 15
	NUMERIC_CONST  shift 16
	.  error

	expression  goto 62
	term  goto 20
	factor  goto 21


state 41
	condition : expression '>' . expression  (81)

	ID  shift 15
	NUMERIC_CONST  shift 16
	.  error

	expression  goto 63
	term  goto 20
	factor  goto 21


state 42
	condition : expression '<' . expression  (82)

	ID  shift 15
	NUMERIC_CONST  shift 16
	.  error

	expression  goto 64
	term  goto 20
	factor  goto 21


state 43
	expression : expression '+' . term  (86)

	ID  shift 15
	NUMERIC_CONST  shift 16
	.  error

	term  goto 65
	factor  goto 21


state 44
	expression : expression '-' . term  (87)

	ID  shift 15
	NUMERIC_CONST  shift 16
	.  error

	term  goto 66
	factor  goto 21


state 45
	term : term '*' . factor  (89)

	ID  shift 15
	NUMERIC_CONST  shift 16
	.  error

	factor  goto 67


state 46
	term : term '/' . factor  (90)

	ID  shift 15
	NUMERIC_CONST  shift 16
	.  error

	factor  goto 68


state 47
	assignation_statement : LET ID '=' . expression '.'  (79)

	ID  shift 15
	NUMERIC_CONST  shift 16
	.  error

	expression  goto 69
	term  goto 20
	factor  goto 21


state 48
	declarative_statements : ':' type '.' .  (11)

	.  reduce 11


state 49
	if_statement : '(' condition ')' . THEN executional_statements END_IF '.'  (32)
	if_statement : '(' condition ')' . THEN explicit_delimited_execution_block END_IF '.'  (39)
	if_else_statement : '(' condition ')' . THEN executional_statements ELSE executional_statements END_IF '.'  (52)
	if_else_statement : '(' condition ')' . THEN executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (60)
	if_else_statement : '(' condition ')' . THEN explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (68)
	if_else_statement : '(' condition ')' . THEN explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (76)

	THEN  shift 70
	.  error


state 50
	declarative_statements : var_list ':' '.' .  (9)

	.  reduce 9


state 51
	declarative_statements : var_list ':' type . '.'  (7)
	declarative_statements : var_list ':' type .  (8)

	'.'  shift 71
	$end  reduce 8
	ID  reduce 8
	IF  reduce 8
	LET  reduce 8
	':'  reduce 8
	','  reduce 8
	'('  reduce 8


state 52
	var_list : var_list ',' ID .  (15)

	.  reduce 15


state 53
	declarative_statements : var_list type '.' .  (10)

	.  reduce 10


state 54
	declarative_statements : var_list type $$1 . ':' '.'  (13)

	':'  shift 72
	.  error


state 55
	if_statement : IF '(' ')' THEN . executional_statements END_IF '.'  (30)
	if_statement : IF '(' ')' THEN . explicit_delimited_execution_block END_IF '.'  (37)
	if_else_statement : IF '(' ')' THEN . executional_statements ELSE executional_statements END_IF '.'  (50)
	if_else_statement : IF '(' ')' THEN . executional_statements ELSE explicit_delimited_execution_block END_IF '.'  (58)
	if_else_statement : IF '(' ')' THEN . explicit_delimited_execution_block ELSE executional_statements END_IF '.'  (66)
	if_else_statement : IF '(' ')' THEN . explicit_delimited_execution_block ELSE explicit_delimited_execution_block END_IF '.'  (74)

	IF  shift 2
	BEGIN  shift 73
	LET  shift 3
	'('  shift 6
	.  error

	executional_statements  goto 74
	if_statement  goto 12
	if_else_statement  goto 13
	assignation_statement  goto 14
	explicit_delimited_execution_block  goto 75

